Implement co-purchase analysis and output merging functionality